various updates including: api call token inclusion, suspend/archive users, db and auth user info sync, dialog resize updates

--- a/src/behaviors/guuey-dialog-resize-behavior.html
+++ b/src/behaviors/guuey-dialog-resize-behavior.html
@@ -15,7 +15,7 @@
         this._fitDialogs();
       },
 
-      _fitDialogs: function(xScroll) {
+      _fitDialogs: function() {
         var dialogs = Polymer.dom(this.root).querySelectorAll('.guuey-modal', '#addGoalModal');
           dialogs.forEach(function(dialog) {
             dialog.fitInto = window;
