--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -413,6 +413,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     .menu-link {
       all: inherit;
       text-transform: uppercase;
+      padding-left:12px;
+      padding-right:12px;
     }
 
     .sub-menu-href {
